# Sorting-Plot

./: .clang-format  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  linux.yml  mingw.yml  windows.yml
lib/: CMakeLists.txt  matplotlibcpp.h
src/: InputHandler.cpp  InputHandler.h  Sorter.cpp  Sorter.h  SortingAlgorithmsContainer.cpp  SortingAlgorithmsContainer.h  VectorUtils.cpp  VectorUtils.h
src/Algorithms/: Algorithms.h  BubbleSort.cpp  InsertionSort.cpp  QuickSort.cpp  SelectionSort.cpp  ShellSort.cpp  StdSort.cpp
